Correccion de espaciado entre lineas y color de texto

--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
         <div id="cuadro-de-salida">
                         
                 <div class="margen-de-salida"> 
-                    <span id="palabra-de-salida" > </span> 
+                    <p id="palabra-de-salida"> </p> <br>
                 </div>
 
                 
